--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -51,8 +51,9 @@ nav
     justify-content: space-between
     padding: 0 20px
     line-height: 20px
-    p
+    .name
         font-size: 30px
+        line-height: 80px
         font-weight: 700
 
 .link
@@ -60,9 +61,8 @@ nav
     @include links
 
 
-.announcement
+.layout
     width: 500px
-    // text-align: right
     margin-top: 100px
     margin-left: 100px
     h1
