adds project content

--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -50,6 +50,7 @@ nav
     justify-content: space-between
     padding: 0 20px
     line-height: 20px
+
     .name
         font-size: 30px
         line-height: 80px
@@ -72,8 +73,16 @@ nav
 
 
 .projects
-    background-color: $grayscale1
+    background-color: $grayscale2
     padding: 5px 100px
+    margin-bottom: 100px
+
+.projects-container
+    display: flex
 
 .project
-    background-color: $coral
+    margin-right: 6vh
+    background-color: $grayscale1
+    padding: 5px 20px
+    border-radius: 5px
+    box-shadow: 2px 2px 5px $grayscale3;
