adds autobiographical info and links to github projects

--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -18,9 +18,9 @@ $grayscale9: #000000
 @mixin links
     font-weight: 600
     text-decoration: none
-    color: $pink
+    color: $coral
     &:hover
-        color: $coral
+        color: $pink
 
 body
     font-family: Avenir, Helvetica Neue, sans-serif
@@ -56,6 +56,7 @@ nav
         line-height: 80px
         font-weight: 700
         color: $grayscale9
+        text-decoration: none
 
 .link
     padding: 12px
@@ -63,8 +64,8 @@ nav
 
 
 .layout
-    width: 600px
-    padding: 100px
+    width: 50%
+    padding: 5em
     h1
         margin: 16px 0
     h3
@@ -74,8 +75,8 @@ nav
 
 .projects
     background-color: $grayscale2
-    padding: 5px 100px
-    margin-bottom: 100px
+    padding: 5px 5em
+    margin-bottom: 5em
 
 .projects-container
     display: flex
@@ -83,6 +84,6 @@ nav
 .project
     margin-right: 6vh
     background-color: $grayscale1
-    padding: 5px 20px
+    padding: 5px 1em
     border-radius: 5px
     box-shadow: 2px 2px 5px $grayscale3;
