--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -54,15 +54,27 @@ p
     border-radius: 5px
 
 .resume
-    margin-top: 10vh
+    margin: 10vh 0
     display: flex
     flex-direction: column
     align-items: center
     img
-        width: 100vh
+        width: 140vh
+    a
+        background-color: $grayscale7
+        padding: 7px 15px
+        margin: 2em
+        text-decoration: none
+        border-radius: 5px
+        box-shadow: 2px 2px 5px $grayscale3
+        color: $grayscale1
+        font-weight: 400
+        &:hover
+            color: $pink
+            -webkit-transform: perspective(1px) translateZ(0);
+            transform: perspective(1px) translateZ(0);
+            -webkit-transition-duration: 0.3s
 
-
-    
 
 nav
     // background-color: $grayscale1
@@ -114,6 +126,9 @@ nav
     a
         color: $grayscale8
         padding: .5em
+
+.contact-page
+    min-height: 100vh
 
 
 
