--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -40,11 +40,19 @@ h2
     color: $grayscale8
 
 p
-    font-size: 18px
     color: $grayscale8
+
+ul
+    padding-inline-start: 0px
+
+li
+    list-style-type: none
 
 .link
     @include links
+
+.small-link
+    color: $grayscale8
 
 .headshot
     width: 60vh
@@ -112,14 +120,20 @@ nav
 .projects-container
     display: flex
 
-.project
+.project-thumbnail
+    text-decoration: none
     margin-right: 6vh
     background-color: $grayscale1
     padding: 5px 1em
     border-radius: 5px
     box-shadow: 2px 2px 5px $grayscale3
+    h3
+        text-decoration: none
+    p
+        text-decoration: none
 
 .footer
+    padding-top: 3em
     display: flex
     justify-content: center
     font-size: 28px
@@ -129,6 +143,33 @@ nav
 
 .contact-page
     min-height: 100vh
+
+
+.project-page
+    padding: 0 5em
+    .project-title
+        display: flex
+        align-items: baseline
+        h1
+            padding-right: 20px
+            margin-bottom: 20px
+        h4
+            color: $grayscale5
+    .media-box
+        padding: 1.5em
+        background-color: $grayscale1
+        display: flex
+        justify-content: center
+        .project-page-media
+            width: 100%
+            box-shadow: 5px 5px 10px $grayscale3
+            border-radius: 5px
+    .text-container
+        display: flex
+        div
+            padding: 1em 4em
+            min-width: 10%
+
 
 
 
