--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -13,7 +13,34 @@ $grayscale5: #7e878c
 $grayscale6: #5b6168
 $grayscale7: #393e44
 $grayscale8: #212528
-$grayscale9: #000000  
+$grayscale9: #000000
+
+$h1-size: 4em
+
+/* Extra small devices (phones, 600px and down) */
+@media (max-width: 600px)
+    h1
+        color: red
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media (min-width: 600px)
+    h1
+        color: blue
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media (min-width: 768px)
+    h1
+        color: green
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media (min-width: 992px)
+    h1
+        color: yellow
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media (min-width: 1200px)
+    h1
+        color: orange
 
 @mixin links
     font-weight: 600
@@ -31,19 +58,19 @@ body
     color: $grayscale8
 
 h1
-    font-size: 72px
-    margin: 30px 0
+    font-size: $h1-size
+    margin: 1em 0
     color: $grayscale8
 
 h2
-    font-size: 36px
+    font-size: 2em
     color: $grayscale8
 
 p
     color: $grayscale8
 
 ul
-    padding-inline-start: 0px
+    padding-inline-start: 0em
 
 li
     list-style-type: none
@@ -54,12 +81,30 @@ li
 .small-link
     color: $grayscale8
 
-.headshot
-    width: 60vh
-    position: absolute
-    right: 10vh
-    top: 30vh
-    border-radius: 5px
+.about-layout
+    padding: 0 5em
+    @media (max-width: 600px)
+        padding: 0 2em
+    h1
+        margin: .5em 0
+    .about-content
+        display: flex
+        justify-content: flex-start
+        align-items: flex-start
+        @media (max-width: 600px)
+            flex-direction: column
+            justify-content: center
+            align-items: center
+        h3
+            margin-top: 0
+        .headshot
+            @media (min-width: 600px)
+                object-fit: contain
+                max-width: 50vh
+                border-radius: 5px
+                margin: 0 2em
+            @media (max-width: 600px)
+                max-width: 40vh
 
 .resume
     margin: 10vh 0
@@ -70,7 +115,7 @@ li
         width: 140vh
     a
         background-color: $grayscale7
-        padding: 7px 15px
+        padding: .5em 1em
         margin: 2em
         text-decoration: none
         border-radius: 5px
@@ -88,28 +133,39 @@ nav
     display: flex
     align-items: center
     justify-content: space-between
-    padding: 0 20px
-    line-height: 20px
+    padding: .5em 2em
+    @media (max-width: 600px)
+        align-items: flex-start
     .name
-        font-size: 30px
-        line-height: 80px
+        line-height: 2.5em
+        font-size: 2em
         font-weight: 700
         color: $grayscale8
         text-decoration: none
+        @media (max-width: 600px)
+            line-height: 1em
+    .nav-link-container
+        @media (max-width: 600px)
+            display: flex
+            flex-direction: column
     .nav-link
-        padding: 12px
+        padding: .5em
         @include links
-
-
+        
 .layout
-    width: 50%
-    padding: 5em
+    @media (min-width: 600px)
+        width: 50%
+        padding: 5em
+        h1
+            margin: .5em 0
+        h3
+            margin: 10px 0
+            line-height: 36px
+    @media (max-width: 600px)
+        padding: 2em
     h1
-        margin: 16px 0
-    h3
-        margin: 10px 0
-        line-height: 36px
-
+        @media (max-width: 600px)
+            padding: 0
 
 .projects
     background-color: $grayscale2
