edits typos and image resize for phone

--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -236,8 +236,10 @@ nav
         justify-content: center
         @media (max-width: 600px)
             padding: .5em
+            max-height: 6vh
         .project-page-media
-            width: 100%
+            max-width: 100%
+            // object-fit: contain
             box-shadow: 5px 5px 10px $grayscale3
             border-radius: 5px
     .text-container
