updated homepage hero, links open to new page, adds emoji

--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -7,7 +7,7 @@ $pink: #F9B3AF
 $coral: #F9724E
 
 $grayscale1: #ffffff
-$grayscale2: #e6ebef
+$grayscale2: #f2f6fa
 $grayscale3: #ced7dd
 $grayscale4: #9ea8af
 $grayscale5: #7e878c
@@ -144,12 +144,15 @@ nav
         padding: 5em
         h1
             margin: .5em 0
+        h2
+            font-size: 2.2em
+            line-height: 1.4em
         h3
             margin: 10px 0
             line-height: 36px
     @media (max-width: $phone)
         padding: 2em
-    h1
+    h1, h2
         @media (max-width: $phone)
             padding: 0
 
