--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -185,13 +185,14 @@ nav
         font-size: 2em
 
 .footer
-    padding-top: 3em
+    padding: 3em 1em 0 1em
     display: flex
-    justify-content: center
-    font-size: 28px
+    justify-content: space-between
+    align-items: center
     a
         color: $grayscale8
-        padding: .5em
+        font-size: 16px
+        padding: .5em 1em
 
 .contact-page
     min-height: 100vh
